--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -38,7 +38,7 @@ body {
     margin: 0;
     padding: 0 20px;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
     height: 100%;
     flex-wrap: wrap;
@@ -55,6 +55,7 @@ body {
     display: flex;
     align-items: center;
     flex-shrink: 0;
+    margin-left: auto;
 }
 
 .nav-logo {
