--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -31,6 +31,7 @@ body {
     height: 90px;
     display: flex;
     align-items: center;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .navbar.show {
